[package]
name = "autopowerbill"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1"}
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
