[package]
name = "autopowerbill"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1"}
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
postgres-openssl = "0.5.0"
openssl = "0.10.64"
rust_decimal = { version = "1.35.0", features = ["db-tokio-postgres"] }
